# CP3_CGProyect

./: CMakeLists.txt  README.md  README_2.md  cg.cu  cg.h  cg_gpu.cu  cg_gpu.h  cg_gpu_mp.cu  cg_gpu_mp.h  cg_gpu_pc.cu  cg_gpu_pc_mp.cu  cg_gpu_pc_sp.cu  cg_gpu_pm.cu  cg_gpu_pm.h  cg_gpu_sp.cu  cg_gpu_sp.h  cg_pm.cu  cg_pm.h  cg_test.cu  cg_test.h  dot_prod_test.cu  dot_prod_test.h  geometry.cu  geometry.h  global.h  linalg.cu  linalg.h  mp_refinement.cu  mp_refinement.h  new_func.cu  pm_test.cu  pm_test.h  pow_method.cu  pow_method.h  pow_method_gpu.cu  pow_method_gpu.h  run-cg.cu  transform.cu  transform.h
